--- a/client/back-office/views/home.html
+++ b/client/back-office/views/home.html
@@ -18,82 +18,94 @@
         user = await isUserLogged()
         if(user === undefined)
           window.location.href = "http://localhost:5000/b/views/login.html"
+        fillCards()
       }
-
       $(document).ready(function () {
         $("#sidebar").load("../tabs/sidebar.html");
       });
       const gotologin = (href) => {
         window.location.href = href;
       };
-      let services1 = [
+      let services = [
         {
           text: "customers",
           img: "../public/customers.png",
           alt: "customers icon",
           href: "customers.html",
+          diff: false
         },
         {
           text: "forum",
           img: "../public/forum.png",
           alt: "forum icon",
           href: "forum.html",
+          diff: false
         },
         {
           text: "e-commerce",
           img: "../public/shop.png",
           alt: "shop icon",
           href: "ecommerce.html",
+          diff: false
         },
         {
           text: "prenotations",
           img: "../public/schedule.png",
           alt: "prenotation icon",
           href: "prenotations.html",
+          diff: false
         },
         {
           text: "Billing",
           img: "../public/billing.png",
           alt: "billing icon",
           href: "billing.html",
+          diff: false
         },
         {
-          text: "companies",
+          text: "profile",
           img: "../public/companies.png",
           alt: "companies icon",
-          href: "companies.html",
+          href: "profile.html",
+          diff: true
         },
       ];
-
-      let tmp = "";
-      $(document).ready(function () {
-        services1.map((item) => {
-          tmp +=
-            `<div class="card flex justify-center">
-            <button
-            class="card-body hover:bg-opacity-50"
-            style="padding-left: 3rem; padding-right: 3rem; padding-top:3rem; max-height: 18rem; max-width: 18rem; margin:0.5rem"
-            onclick=gotologin("` +
-            item.href +
-            `")
-            >
-        <img
-        src=` +
-            item.img +
-            `
-        alt=` +
-            item.alt +
-            `
-        class="h-auto w-full object-cover object-center group-hover:opacity-75"
-        />
-        <p class="card-title py-4 font-bold text-center align-center">` +
+      const fillCards = () => {
+        let tmp = "";
+        console.log(user)
+        if(user.admin) {
+          services[5].text = "companies"
+          services[5].href = "companies.html"
+        }
+        $(document).ready(function () {
+          services.map((item) => {
+            tmp +=
+              `<div class="card flex justify-center">
+              <button
+              class="card-body hover:bg-opacity-50"
+              style="padding-left: 3rem; padding-right: 3rem; padding-top:3rem; max-height: 18rem; max-width: 18rem; margin:0.5rem"
+              onclick=gotologin("` +
+              item.href +
+              `")
+              >
+          <img
+          src=` +
+              item.img +
+              `
+          alt=` +
+              item.alt +
+              `
+          class="h-auto w-full object-cover object-center group-hover:opacity-75"
+          />
+          <p class="card-title py-4 font-bold text-center align-center">` +
             item.text.toLocaleUpperCase() +
-            `</p>
-        </div>
-        </button>`;
-          $("#cards").html(tmp);
+          `</p>
+          </div>
+          </button>`;
+            $("#cards").html(tmp);
+          });
         });
-      });
+      }
     </script>
   </head>
   <body onload="setUser()">
